...
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchViewPeople"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:queryHint="@string/search_hint"
            android:gravity="center"
            android:focusable="true"
            android:iconifiedByDefault="false"/>
    </androidx.appcompat.widget.Toolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSearchUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
