...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add_post"
        android:icon="@drawable/ic_add_post"
...
