<resources>
    <string name="app_name">Beome</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_add">Add</string>
    <string name="title_like">Like</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent">Recent</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="unfollow">Unfollow</string>
    <string name="option_menu_post">⋮</string>
    <string name="zero_value">0</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="fullname">Fullname</string>
    <string name="username">Username</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="create_an_account">Lets create an account</string>
    <string name="sign_you_in">Let\'s sign you in.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="report">Report</string>
    <string name="empty_view">empty_view</string>
    <string name="follower_count">Follower\n%1$d</string>
    <string name="post_count">Post\n%1$d</string>
    <string name="post">Post</string>
    <string name="reason">Reason</string>
    <string name="report_detail">Report detail</string>
    <string name="submit_report">Submit Report</string>
    <string name="select_a_reason">Select a reason</string>
    <string name="describe_why_you_report">Describe why you report this…</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="post_date">Yesterday</string>
    <string name="tags">Tags</string>
    <string name="title">Title</string>
    <string name="feedback">Feedback</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_fill_the_information">Please fill the information</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="agreement_term_of_user">By registering, I confirm that I have read and agree to the</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">Sign In</string>
    <string name="provide_feedback">Please provide rating using scale from 1 to 5 which 1 is very bad and 5 is very good.</string>
    <string name="component_name">Component</string>
    <string name="one">1</string>
    <string name="submit">Submit</string>
    <string name="add_your_title">Add your title</string>
    <string name="description">Description</string>
    <string name="describe_your_work">Describe your work</string>
    <string name="rate_feedback_information">You can add up to 5 feedback component. Your feedback will be rating from 1 to 5. Example of feedback: Colouring; Hierarchy; Typography.</string>
    <string name="add_feedback">New Component</string>
    <string name="add_component">Add component</string>
    <string name="publish">Publish</string>
    <string name="change_image">Change Image</string>
    <string name="add_image">Add Image</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="anything_that_can_be_improve">Anything that can be improve?</string>
    <string name="add_comment">Add comment...</string>
    <string name="belum_login">Anda belum login\nsilahkan login terlebih dahulu</string>
    <string name="logout">Logout</string>
    <string name="people">People</string>
    <string name="search_hint">Search...</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="delete_post_message">Are your sure want to delete this post?</string>
    <string name="delete_feedback_message">Are your sure want to delete this feedback?</string>
    <string name="delete_account_message">Are your sure want to delete this account?</string>
    <string name="feedback_summary">Feedback Summary</string>
    <string name="already_give_feedback">You give feedback to this post already</string>
    <string name="profile_information">Profile information</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="signup_desc">Make profile, follow people, and post\nyour best design!</string>
    <string name="logout_message">Are you sure want to logout from this application?</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="account">Account</string>
    <string name="report_count">report_count</string>
    <string name="delete_feedback">Delete Feedback</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_account">Delete Account</string>
    <string name="beome_community_guideline">Beome Community Guideline</string>
    <!--    notification-->
    <string name="notif_channel_id">activities</string>
    <string name="notif_channel_name">Activities</string>
    <string name="notif_channel_desc">Notifity you when someone like and give feedback to your post and follow you</string>
    <string name="notif_title">Your post is appreciated</string>
    <string name="notif_message">%1$s is %2$s</string>
    <!--    notification-->
    <string name="beome_description">
        Beome is a platform for creative people around the world
        to showcase their own work and to discover the creative work of others.
        These Beome Community Guidelines govern your use
        of Beome to maintain an engaging and trustworthy community.
        If you come across content that violates
        these Guidelines, please follow the instructions in the
        "Report Abuse" section below.
    </string>
    <string name="respectful_and_safe">1.Respectful and Safe</string>
    <string name="community_guideline_1">
        We don’t allow abusive or illegal content or behavior. This includes, but is not limited to, the following:\n
        \n<li>Spam or posts related to the sale of non-creative goods or services</li>
        \n<li>Pornographic material and explicit nudity</li>
        \n<li>Harassment and threats</li>
        \n<li>Hateful or highly offensive content that attacks or dehumanizes
            a group based on race, ethnicity, national origin, religion,
            serious disease or disability, gender, age, or sexual orientation</li>
        \n<li>Graphic violence or gore</li>
        \n<li>Illegal activities or goods</li>
        \n<li>Self-harm or the promotion of self-harm</li>
        \n<li>Depictions of minors in a sexual manner</li>
        \n<li>Promotion of terrorism or violent extremism</li>
        \n<li>Dissemination of misleading, fraudulent, or deceptive content
            that could lead to real-world harm</li>
        \n<li>Personal or private information of others (like full name, home address,
            phone number, email address, government issued IDs, or anything else
            that would let someone locate or contact you in the real world))</li>
    </string>
    <string name="supportive">2. Supportive</string>
    <string name="community_guideline_2">
        We value artistic expression, but we ask that you keep your feedback and other communications constructive and respectful.
        We don\'t tolerate abusive, vulgar or insulting comments and messages.
    </string>
    <string name="authentic">3. Authentic</string>
    <string name="community_guideline_3">
        We disable accounts that engage in behavior that undermines the authenticity of our community, including but not limited to,the following deceptive or harmful behaviors:\n
        \n<li>Using fake, misleading, or inaccurate information in your profile</li>
        \n<li>Impersonating other people or entities</li>
        \n<li>Falsely attributing someone’s work</li>
    </string>
    <string name="guide_report_abuse">Guide: Report Abuse on Beome</string>
    <string name="guide_report_description">
        If you ever experience a user violating the Community Guidelines you can make a report to us. See below on how to make a report to us:
    </string>
    <string name="report_profile">Report A Profile</string>
    <string name="report_profile_step">
        \n<li>Go to the Profile Page</li>
        \n<li>Click on the ... (Three dots) icon on the top right corner of the page</li>
        \n<li>Click Report</li>
        \n<li>Select the reason you are reporting the account and add
            any additional comments that may help us in our review (if applicable)</li>
    </string>
    <string name="report_post">Report A Post</string>
    <string name="report_post_step">
       \n<li>Go to the Detail Post Page</li>
        \n<li>Click on the ... (Three dots) icon on the top right corner of the page</li>
        \n<li>Click Report</li>
        \n<li>Select the reason you are reporting the post and add any additional comments that may help us in our review (if applicable)</li>
    </string>
    <string name="report_feedback">Report A Feedback</string>
    <string name="report_feedback_step">
        \n<li>Scroll down to the bottom of the detail post page</li>
        \n<li>Click on the ... (Three dots) icon on the top right corner of the feedback</li>
        \n<li>Click Report</li>
        \n<li>Select the reason you are reporting the feedback and add any additional comments that may help us in our review (if applicable)</li>
    </string>
    <string name="enthusiast">Enthusiast</string>
    <string name="guru">Guru</string>
    <string name="category">Category</string>
    <string name="category_note">Select up to 3 category</string>
    <string name="suggested_feedback">Suggested Feedback</string>
    <string name="custom_feedback">Custom Feedback</string>
    <string name="add">add</string>
    <string name="tags_note">Add up to 5 tag</string>
    <string name="add_tag">add tag</string>
    <string name="input_tag">Input tag</string>
    <string name="cust_feedback_note">Add up to 2 custom feedback</string>
</resources>