...
        android:textStyle="bold"
        android:textColor="@color/text_color_primary"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectReason"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectReason" />

    <EditText
        android:id="@+id/editTextTextReportDetail"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_text"
        android:gravity="top"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/buttonSubmitReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_rounded_button"
...
